--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Test</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="flex justify-between">
       <h1>Casserole Trompette</h1>
       <ul>
         <li><a href="#">Réserver</a></li>
@@ -14,16 +16,16 @@
     </header>
     <main>
       <section>
-        <h2>C’est quoi ce bordel ?</h2>
-        <span>Venez vous éclater</span>
+        <h2 class="text-center">C’est quoi ce bordel ?</h2>
+        <h3 class="text-center">Venez vous éclater</h3>
         <div>
           <p>Casserole & Trompette est un nouveau restaurant en plein cœur des rues animées de Caen qui vous propose en plus de ses plats raffinés, une ambiance festive ! Les plats sortent toujours de la cuisine en fanfare avec notre orchestre de cuivres tonitruant. Et si vous nous aidez à mettre l’ambiance en montant sur les tables, on vous offre des shots !</p>
           <img src="assets/playing-inst.jpg" alt="iplaying-instrument" />
         </div>
       </section>
       <section>
-        <h2>Une fanfare dans un resto ?</h2>
-        <span>Mais vous êtes tarés !</span>
+        <h2 class="text-center">Une fanfare dans un resto ?</h2>
+        <h3 class="text-center">Mais vous êtes tarés !</h3 class="text-center">
         <div>
           <img src="assets/group-playing.png" alt="group-playing" />
         </div>
@@ -35,8 +37,8 @@
         </div>
       </section>
       <section>
-        <h2>Qu’est-ce qu’on mange ?</h2>
-        <span>La carte</span>
+        <h2 class="text-center">Qu’est-ce qu’on mange ?</h2>
+        <h3 class="text-center">La carte</h3 class="text-center">
         <div>
           <div class="entrees"></div>
           <div class="plats"></div>
@@ -45,8 +47,8 @@
         </div>
       </section>
       <section>
-        <h2>Ça se passe où ? On vient quand ?</h2>
-        <span>Réservez une table</span>
+        <h2 class="text-center">Ça se passe où ? On vient quand ?</h2>
+        <h3 class="text-center">Réservez une table</h3 class="text-center">
         <div>
           <div class="location">
             <img src="assets/location logo.png" alt="location" />
